Updated README to comply with style conventions

--- a/README
+++ b/README
@@ -1,12 +1,23 @@
-|| RAW SOFTWARE ||
+======
+SNDCNV
+======
 
-title = "|| SNDCNV ||"
-author = "|| Hugh Rawlinson ||"
-
+About
+=====
 A python soundfile converter that will convert between Wave and Aiff formats. The program finds the file type of the file pointed to in the first argument, and converts it to the other.
-
-Usage: python main.py [filetoconvert.extention] [desiredfilename.extention]
-Extention is not manditory.
 
 I use Nilton Volpato's progressbar, which is available at http://code.google.com/p/python-progressbar/
 Naturally, no copyright infringement is intended. I release my code as open source, as did Nilton Volpato with progressbar, and I only include it here for ease of use of my program.
+
+Usage
+=====
+Usage: python SNDCNV.py [filetoconvert.extention] [desiredfilename.extention]
+Extention is not manditory.
+
+Version Notes
+=============
+This version has implemented basic functonality, and is intended for public testing. A pre-compiled .pyc file has been included for ease of use.
+
+Copyright Notice
+================
+Copyright Hugh Rawlinson, 2012. The code is open source. It may be used freely in open source software. When used, it must be attributed, and the using program must be open source, and non commercial. I reserve the right to profit from this software, and to use it in my own projects that may be commercial, proprietary, and closed-sourced.
